get Java 9 working