@@ -9,6 +9,14 @@ buildscript {
     }
 }
 
+allprojects {
+    task hello {
+        doLast { task ->
+            println "I'm $task.project.name"
+        }
+    }
+}
+
 subprojects {
     apply plugin: "java"
     apply plugin: 'maven-publish'
@@ -17,6 +25,39 @@ subprojects {
     group = 'de.jensd'
     sourceCompatibility = '1.9'
     [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+    ext.moduleName = 'de.jensd.fx.glyphs'
+
+
+
+    compileJava {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+            ]
+            classpath = files()
+        }
+    }
+
+    jar {
+        inputs.property("moduleName", moduleName)
+        manifest {
+            attributes('Automatic-Module-Name': moduleName)
+        }
+    }
+
+    test {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            jvmArgs = [
+                    '--module-path', classpath.asPath,
+                    '--add-modules', 'ALL-MODULE-PATH',
+                    '--add-reads', "$moduleName=junit",
+                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+            ]
+            classpath = files()
+        }
+    }
 
     bintray {
         user = System.getenv('BINTRAY_USER')
@@ -32,44 +73,13 @@ subprojects {
             issueTrackerUrl = 'https://bitbucket.org/Jerady/fontawesomefx/issues'
             publicDownloadNumbers = true
             version {
-                name = '8.10'
-                desc = 'FontAwesomeFX 8.10'
-                vcsTag = 'fontawesomefx-8.10'
+                name = '9.0'
+                desc = 'FontAwesomeFX 9.0'
+                vcsTag = 'fontawesomefx-9.0'
             }
         }
     }
-    
-//    install {
-//        repositories.mavenInstaller {
-//            pom {
-//                project {
-//                    packaging 'jar'
-//                    name 'FontAwesomeFX'
-//                    description 'Use WebFonts as icon source for JavaFX applications.'
-//                    url 'http://www.jensd.de'
-//                    licenses {
-//                        license {
-//                            name 'The Apache Software License, Version 2.0'
-//                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-//                        }
-//                    }
-//                    developers {
-//                        developer {
-//                            id 'jens.deters'
-//                            name 'Jens Deters'
-//                            email 'mail@jensd.de'
-//                            url 'http://www.jensd.de'
-//                        }
-//                    }
-//                    scm {
-//                        connection 'scm:git:https://Jerady@bitbucket.org/Jerady/fontawesomefx.git'
-//                        developerConnection 'scm:git:https://Jerady@bitbucket.org/Jerady/fontawesomefx.git'
-//                        url 'https://bitbucket.org/Jerady/fontawesomefx'
-//                    }
-//                }
-//            }
-//        }
-//    }
+
 
     repositories {
         mavenCentral()
@@ -77,8 +87,8 @@ subprojects {
     }
 
     task javadocJar(type: Jar) {
-        classifier = 'javadoc'
-        from javadoc
+        classifier 'javadoc'
+        from javadoc.destinationDir
     }
 
     task sourceJar(type: Jar) {
@@ -108,5 +118,5 @@ subprojects {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+    gradleVersion = '4.2'
 }
